@@ -1,3 +1,8 @@
+2007-03-21  Arno Rehn  <arno@arnorehn.de>
+
+	* Moved the check and 'workaround' for instance operators from C# to C++.
+	  Doesn't create any additional overhead like the C# solution.
+
 2007-03-18  Richard Dale  <rdale@foton.es>
 
 	* Changed the name of the debug class from Debug to QDebug as it made 
